<resources>
    <string name="app_name">Fake Call &amp; SMS</string>
    <string name="action_settings">Settings</string>
    <string name="edit_call">Edit Call</string>
    <string name="choose_theme">Choose your Theme</string>
    <string name="lb_time_to_call">Time to call</string>
    <string name="time_value_now">Right now</string>
    <string name="time_value_15s">15 seconds from now</string>
    <string name="time_value_30s">30 seconds from now</string>
    <string name="time_value_1m">1 minutes from now</string>
    <string name="time_value_5m">5 minutes from now</string>
    <string name="lb_phone_ui">Theme</string>
    <string name="lb_caller_number">Number</string>
    <string name="lb_not_set">Not set</string>
    <string name="lb_incoming_call">Incoming call</string>
    <string name="lb_caller_name">Name</string>
    <string name="mn_opt_private_num">Private number</string>
    <string name="mn_opt_open_contact">Open Contact</string>
    <string name="lb_save">Save</string>
    <string name="lb_required_call_settings">Call settings</string>
    <string name="lb_caller_info">Caller Info</string>
    <string name="lb_scheduled">Scheduled</string>
    <string name="menu_opt_now">Now</string>
    <string name="menu_opt_15s">15 s</string>
    <string name="menu_opt_30s">30 s</string>
    <string name="menu_opt_1min">1 min</string>
    <string name="menu_opt_5min">5 mins</string>
    <string name="menu_opt_custom">Custom</string>
    <string name="lb_primary_text">Primary text</string>
    <string name="lb_secondary_text">Secondary text</string>
    <string name="lb_vibrate">Vibrate?</string>
    <string name="mn_opt_choose_image">Choose Image</string>
    <string name="mn_opt_take_image">Take from Camera</string>
    <string name="lb_on">On</string>
    <string name="lb_off">Off</string>
    <string name="lb_tab_call">Call</string>
    <string name="lb_tab_sms">SMS</string>
    <string name="lb_more_setting">More settings</string>
    <string name="lb_choose_voice">Choose voice</string>
    <string name="lb_choose_ringtone">Choose Ringtone</string>
    <string name="lb_alarmed">Alarmed</string>
    <string name="lb_pending">Pending</string>
    <string name="lb_more_setting_">Setup more call setting…</string>
    <string name="lb_call_duration">In-call duration</string>
    <string name="lb_in_call_voice">In-call voice</string>
    <string name="lb_tab_recorded">Recorded</string>
    <string name="lb_tab_all">All</string>
    <string name="lb_ok">OK</string>
    <string name="mn_opt_delete">Delete</string>
    <string name="lb_delete_all">Delete All</string>
    <string name="lb_cancel">Cancel</string>
    <string name="lb_preview">Preview</string>
    <string name="full_date_time_pattern">MMM dd yyyy, hh:mm:ss</string>
    <string name="lb_hold">Hold</string>
    <string name="lb_reject_call_with_sms">Reject Call with SMS</string>
    <string name="lb_add_call">Add Call</string>
    <string name="lb_extra_volume">Extra volume</string>
    <string name="lb_bluetooth">Bluetooth</string>
    <string name="lb_speaker">Speaker</string>
    <string name="lb_keypad">Keypad</string>
    <string name="lb_mute">Mute</string>
</resources>
