<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/lyOptionalSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.alex.fakecall.views.TwoLineTextOption
            android:id="@+id/optRingtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftIcon="@drawable/ic_menu_ringtone"
            app:optText="Ringtone"
            app:valueText="Default Ringtone" />

        <com.alex.fakecall.views.SwitchOption
            android:id="@+id/optVibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftIcon="@drawable/ic_menu_vibrate"
            app:optText="@string/lb_vibrate"
            app:valueOnChecked="@string/lb_on"
            app:valueOnNoChecked="@string/lb_off" />
    </LinearLayout>
</merge>