<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btnChangeCaller"
                    android:layout_toRightOf="@+id/profile_image"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtCallerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:hint="@string/lb_caller_name"
                        android:inputType="textPersonName"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtCallerNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/lb_caller_number"
                        android:inputType="phone"
                        android:textSize="17sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/btnChangeCaller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_action_contact" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ddd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/lb_required_settings"
                android:textColor="#FC02"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/btnSelectTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_action_timer" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/lb_time_to_call"
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvTimeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_time_value"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btnPhoneUI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_action_phone_ui" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/lb_phone_ui"
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvPhoneUIValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lb_not_set"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ddd" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/primary_button_bg"
                android:text="@string/lb_save"
                android:textColor="#FFF" />
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
